# Peanut

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  imgui.ini  test.peanut  vcpkg.json
Plugins/: Terrain.cpp  TestPlugin.cpp
apps/: Application.cpp  CMakeLists.txt  FileSelectionPanel.h  PropertyPanel.cpp  RenderStatsPanel.cpp  RenderStatsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneHierarchyPanel.hpp  ScriptLibrary.h  ViewportPanel.cpp  ViewportPanel.h  ViewportPanel.hpp
include/: Application.h  BufferLayout.h  Event.h  FileSelectorDialog.h  IndexBuffer.h  Input.h  KeyCodes.h  Log.h  Math.h  MouseCodes.h  Peanut.h  Renderer.h  ScriptLibrary.h  Shader.h  Texture.h  TimeStep.h  VertexArray.h  VertexBuffer.h  Window.h
include/Events/: Event.h  KeyEvent.h  MouseEvents.h  WindowEvents.h
include/Renderer/: BufferLayout.h  FrameBuffer.h  IndexBuffer.h  Lights.h  Material.h  Mesh.h  ModelLibrary.h  OrthoCamera.h  PerspectiveCamera.h  Renderer.h  Renderer2D.h  Shader.h  Texture.h  TextureLibrary.h  VertexArray.h  VertexBuffer.h
include/Scene/: Component.h  Entity.h  NativeScript.h  Scene.h  SceneSerializer.h
include/peanut/: Application.hpp  Component.hpp  Engine.hpp  Entity.hpp  Event.hpp  FileSelectorDialog.hpp  Input.hpp  KeyEvent.hpp  Log.hpp  Math.hpp  MouseEvents.hpp  NativeScript.hpp  PerspectiveCamera.hpp  PluginManager.hpp  Scene.hpp  ShaderLibrary.hpp  Window.hpp  WindowEvents.hpp
res/: 3D-Test.peanut  test.peanut
res/models/cube/: cube.mtl
res/scripts/: CMakeLists.txt  TestScript.cpp  my_test.py  test.lua  test.py
res/shaders/: Generic2D.shader  Lighting.shader  SingleColorOnly.shader  Skybox.shader  basic.shader  basicWithUniform.shader  posAndColor.shader  posColorAndTexture.shader  twoTexture.shader  twoTextureMVP.shader  twoTextureWithTransform.shader
src/: Application.cpp  BufferLayout.cpp  CMakeLists.txt  Engine.cpp  EngineImpl.cpp  EngineImpl.hpp  Entity.cpp  FileSelectorDialog.cpp  GLDebug.cpp  GLDebug.h  IndexBuffer.cpp  NativeScript.cpp  PluginManager.cpp  PythonBindings.hpp  Renderer.cpp  Scene.cpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptLibrary.cpp  Settings.cpp  Settings.h  Settings.hpp  Shader.cpp  Texture.cpp  Util.h  Util.hpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  WindowInput.cpp  stb_image.h
src/Core/: CMakeLists.txt
src/Core/include/: Application.h  Engine.hpp  PluginManager.hpp  Window.h
src/Core/include/Events/: Event.h  KeyEvent.h  MouseEvents.h
src/Core/include/Input/: FileSelectorDialog.h
src/Core/src/: Application.cpp  Engine.cpp  FileSelectorDialog.cpp  PluginManager.cpp  PythonBindings.cpp  PythonBindings.hpp  Window.cpp  WindowInput.cpp
src/OpenGLRenderer/: BufferLayout.cpp  CMakeLists.txt  FrameBuffer.cpp  GLDebug.cpp  GLDebug.h  IndexBuffer.cpp  Mesh.cpp  Model.cpp  ModelLibrary.cpp  OrthoCamera.cpp  PerspectiveCamera.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  TextureLibrary.cpp  VertexArray.cpp  VertexBuffer.cpp
src/OpenGLRenderer/include/Renderer/: FrameBuffer.h  Lights.h  Mesh.h  Model.h  OrthoCamera.h  PerspectiveCamera.h  Renderer.h  Renderer2D.h  Shader.h  ShaderLibrary.h  VertexArray.h  VertexBuffer.h
src/OpenGLRenderer/src/: FrameBuffer.cpp  GLDebug.cpp  GLDebug.h  IndexBuffer.cpp  Mesh.cpp  Model.cpp  ModelLibrary.cpp  PerspectiveCamera.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  ShaderLibrary.cpp  Texture.cpp  TextureLibrary.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Platform/Linux/: GtkFileSelectorDialog.cpp  GtkFileSelectorDialog.h
src/Plugins/: CMakeLists.txt  Terrain.cpp  TestPlugin.cpp
src/Renderer/: BufferLayout.cpp  BufferLayout.hpp  CMakeLists.txt  FrameBuffer.cpp  GLDebug.cpp  GLDebug.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Lights.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLibrary.cpp  ModelLibrary.hpp  OrthoCamera.cpp  OrthoCamera.hpp  PerspectiveCamera.cpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  Texture.cpp  Texture.hpp  TextureLibrary.cpp  TextureLibrary.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Scene/: CMakeLists.txt  Entity.cpp  Scene.cpp  SceneSerializer.cpp
src/Scene/include/Scene/: Component.h  Entity.h  NativeScript.h  Scene.h  SceneSerializer.h
src/Scene/src/: Entity.cpp  NativeScript.cpp  SceneSerializer.cpp
src/Utils/: CMakeLists.txt
src/Utils/src/: Settings.cpp
